# motionpicture

./: NEWS.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
motionpicture/: __init__.py  argparse.py  mopi.py  moviemaker.py
tests/: __init__.py  test_argparse.py  test_mopi.py  test_moviemaker.py
tests/test_moviefiles/: invalid1.py  invalid2.py  invalid3.py  invalid4.py  invalid5.py  invalid6.py  invalid7.py  invalid8.py  valid.py
